2023-08-05T01:25:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5767990024 # 669
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 206 446 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 207 448 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-21] / []

2023-08-04T01:34:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5757413385 # 666
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 205 444 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 206 446 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-20] / []

2023-08-02T01:24:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5733621119 # 660
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-02
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 204 443 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 205 444 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-19] / []

2023-08-01T16:21:55Z: